--- a/lab3(flexbox)/ind.html
+++ b/lab3(flexbox)/ind.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="style.css" rel="stylesheet">
-    <title>Flex-box</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <main>
         <div class="container">
+            <div class="article">
+                <h1>Architectury Gallery</h1>
+            </div>
             <aside class="sidebar first">
-                <div><a href=""><img id="first" src="https://image.flaticon.com/icons/svg/91/91639.svg" alt="icon"
+                <div><a href="index.html"><img src="https://image.flaticon.com/icons/svg/91/91639.svg" alt="icon"
                             width="80px" height="80px"></a></div>
-                <div><a href="ind.html"><img src="https://image.flaticon.com/icons/svg/91/91617.svg" alt="icon"
-                            width="80px" height="80px"></a></div>
+                <div><a href="ind.html"><img id="first" src="https://image.flaticon.com/icons/svg/91/91617.svg"
+                            alt="icon" width="80px" height="80px"></a></div>
             </aside>
             <aside class="sidebar second">
                 <div><a href="#"><img src="in.svg" alt="icon" width="80px" height="80px"></a></div>
@@ -25,32 +27,32 @@
                     <div>
             </aside>
             <ul class="containerfirst">
-                <li class="content"><img src="13.jpg" alt="photo">
+                <li class="content"><img src="22.jpg" alt="photo">
                     <p>Otherwise fully removed cottage especially season design settling went. At arose chamber square
                         unreserved among. Months called court unpleasant outward noisier pleasant tended time found
                         desirous civil. Waited dear pain repeated margaret settle branched spring winding terms
                         natural.Wanted collecting brother lively listening announcing added something called new
                         welcome. </p>
                 </li>
-                <li class="content"><img src="17.jpg" alt="photo">
+                <li class="content"><img src="23.jpg" alt="photo">
                     <p>Hold something behaviour. Unlocked screened plate repair although nature ready seeing. Preserved
                         likewise explained drawn even way abilities entrance fruit neat because thirty bore.Moderate
                         before perceive though fat brother total received respect spoil promotion yourself.Children
                         seeing solicitude more improved wish produce because least paid. </p>
                 </li>
-                <li class="content"><img src="18.jpg" alt="photo">
+                <li class="content"><img src="30.jpg" alt="photo">
                     <p>Friends propriety same express much pasture dependent. Intention genius unknown himself any.
                         Excited far gate shyness rose blind desirous.Forty wishing interested means.Pianoforte than
                         honoured delight branch ladies merit linen after ability out excellent concerns. </p>
                 </li>
-                <li class="content"><img src="14.jpg" alt="photo">
+                <li class="content"><img src="25.jpg" alt="photo">
                     <p>Horses wisdom early jennings shade even dare play longer through formal feebly remember plan hill
                         enough. Minuter society limits set exertion happiness companions esteem civil suspected off
                         sympathize why. John long limited county society happen attempt started mind walls. Cheered
                         remember folly done moderate. Him screened wanted true placing unpacked margaret estate
                         connection his minuter.</p>
                 </li>
-                <li class="content"><img src="16.jpg" alt="photo">
+                <li class="content"><img src="26.jpg" alt="photo">
                     <p>Body man children kept outweigh savings which branched noisier will travelling endeavor wished.
                         Parties how views shewing solicitude perpetual pleasure promise size ham tended equal smart
                         civilly stimulated. Frankness tried seemed nature week. Remember the sold graceful greatly
@@ -58,50 +60,50 @@
                         belonging demesne projection strictly viewing might find feebly juvenile been true tears young
                         rather. </p>
                 </li>
-                <li class="content"><img src="15.jpg" alt="photo">
+                <li class="content"><img src="27.jpg" alt="photo">
                     <p>Grave improved least enjoyment effect moments see children tended painful. Excellence direct
                         exposed ready determine no shew evening tell terminated consulted. Roof celebrated merits visit
                         turned views prepare commanded delighted contained. Months arose direction. Learn repulsive
                         breakfast bringing repair possible day outweigh consisted graceful power age object certain
                         exeter equal proposal. </p>
                 </li>
-                <li class="content"><img src="19.jpg" alt="photo">
+                <li class="content"><img src="28.jpg" alt="photo">
                     <p>Promotion properly smiling arrived downs studied rent shall. Seemed after sending case now worse
                         private jointure feelings venture were merry collecting forbade. Likewise hunted prudent
                         laughing remarkably itself visited pulled. All horses properly surrounded enjoyment. Four men
                         pleased elsewhere detract offending ashamed greater thought exposed. </p>
                 </li>
-                <li class="content"><img src="20.jpg" alt="photo">
+                <li class="content"><img src="29.jpg" alt="photo">
                     <p>Unsatiable widen imprudence draw reached engrossed concealed smart sooner say is behind means.
                         Forfeited removed request weddings received exercise at advanced pressed rest cheerful near
                         resolving produced. Questions companions fortune servants sensible son. Consisted sing attempt
                         applauded cause never principle almost preference myself just shortly time service distant led
                         match. Talking life denoting. </p>
                 </li>
-                <li class="content"><img src="2.jpg" alt="photo">
+                <li class="content"><img src="31.jpg" alt="photo">
                     <p>Mutual turned found request left folly pressed aware attended expect knew. Recurred shy goodness.
                         Sixteen shewing sweetness sportsmen necessary shewing paid invitation wisdom past forth. Merits
                         wisdom giving seen parish their spirit forty felt resembled edward. My often started ashamed
                         wound society. </p>
                 </li>
-                <li class="content"><img src="3.jpg" alt="photo">
+                <li class="content"><img src="21.jpg" alt="photo">
                     <p>Ourselves law regular were attended motionless piqued. Looking spot polite grave. Needed engage
                         humanity early begin satisfied winter admire. Enough shed nothing. Whatever week diverted merely
                         conviction continued.</p>
                 </li>
-                <li class="content"><img src="6.jpg" alt="photo">
+                <li class="content"><img src="33.jpg" alt="photo">
                     <p>High sentiments wrong strongly position middletons means face hundred day. Wrote depart thoughts
                         add sigh oh questions excellence songs defer timed loud. Agreeable winding suffering snug
                         address know grave each. Allowance looking do unsatiable stuff. Five spot furnished unsatiable
                         reasonable noisier occasional simple who direct unwilling sell better. </p>
                 </li>
-                <li class="content"><img src="4.jpg" alt="photo">
+                <li class="content"><img src="34.jpg" alt="photo">
                     <p> Interest quiet law lose private shutters forbade still. Marianne conviction weddings her
                         rejoiced speaking compact children gravity polite thoughts continued collecting esteem. Offence
                         solicitude wished what either relation amounted against. Sight songs welcome concealed hardly
                         eldest miles six. Ladyship sorry money chiefly commanded begin otherwise week. </p>
                 </li>
-                <li class="content"><img src="5.jpg" alt="photo">
+                <li class="content"><img src="36.jpg" alt="photo">
                     <p>Amongst everything society friend collecting mile it cultivated sportsmen rank reached. Conveying
                         worthy family view loud than weddings started resembled astonished polite child. Suffering
                         pulled supplied supplied properly greatest hold graceful. Dried wondered daughters resolved body
