--- a/lab3(flexbox)/index.html
+++ b/lab3(flexbox)/index.html
@@ -12,6 +12,9 @@
 <body>
     <main>
         <div class="container">
+            <div class="article">
+                <h1>Architectury Gallery</h1>
+            </div>
             <aside class="sidebar first">
                 <div><a href=""><img id="first" src="https://image.flaticon.com/icons/svg/91/91639.svg" alt="icon"
                             width="80px" height="80px"></a></div>
