--- a/cat-facts/index.html
+++ b/cat-facts/index.html
@@ -17,10 +17,10 @@
     </header>
     <main>
         <div class="container">
-            <div class="search-form">
+            <form class="search-form">
                 <input type="text" class="search-field">
                 <button class="search-btn">Найти</button>
-            </div>
+            </form>
             <div class="pagination-info">
                 <span>
                     Показывать по
