--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="#">данные <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">справочники</a>
+                            <a class="nav-link" href="indexadm.html">админ панель</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-link">приложения</a>
@@ -74,7 +74,6 @@
                                     style="max-height: 410px; width: 80%;">
                                 <div class="carousel-caption mb-5">
                                     <strong>Экологичная упаковка</strong>
-
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -82,7 +81,6 @@
                                     style="max-height: 410px; width: 80%;">
                                 <div class="carousel-caption mb-5">
                                     <strong>Цены на любой вкус</strong>
-
                                 </div>
                             </div>
                         </div>
@@ -127,7 +125,7 @@
                 </div>
                 <div class="col-sm-4 text-center my-1 rounded"
                     style="border: 1px solid black; background-color: black;">
-                    <i class="fa fa- fa-2x mt-1"></i>
+                    <i class="fa fa-alarm-clock fa-2x mt-1"></i>
                     <h5>Круглосуточная работа</h5>
                 </div>
                 <div class="col-sm-4 text-center my-1 rounded"
@@ -139,24 +137,23 @@
         </section>
         <section>
             <div class="container text-center">
-                <div class="heading-line mx-auto" style="line-height: 3px; color: orange; width: 20%;"></div>
                 <h4>Выбор предприятия общественного питания</h4>
             </div>
-            <div class="filters m-3" style="border: 2px solid black;">
-                <form action="" class="forms">
+            <div class="filters m-3" style="border: 2px solid green;">
+                <form id="forms">
                     <div class="row">
                         <div class="col-md-12 mx-5">
                             <div class="row">
                                 <div class="col-sm-6 form-group mx-auto">
                                     <br><small for="area">Округ</small></br>
-                                    <select name="area" id="area" style="width: 50%">
-                                        <option value="">Не выбрано</option>
+                                    <select name="area" id="area" style="width: 50%; height: 50%;">
+                                        <option value="0">Не выбрано</option>
                                     </select>
                                 </div>
                                 <div class="col-sm-6 form-group mx-auto">
                                     <br><small for="district">Район</small><br>
-                                    <select name="district" id="district" style="width: 50%;">
-                                        <option value="">Не выбрано</option>
+                                    <select name="district" id="district" style="width: 50%; height: 50%;">
+                                        <option value="0">Не выбрано</option>
                                     </select>
                                 </div>
                             </div>
@@ -166,20 +163,25 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <br><small for="type">Тип</small></br>
-                                        <select name="type" id="type" style="width: 40%;">
+                                        <select name="type" id="type" style="width: 50%; height: 50%;">
+                                            <option value="0">Не выбрано</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <br><small for="sales">Социальная скидка</small></br>
-                                        <select name="type" id="sales" style="width: 40%;">
+                                        <select name="type" id="sales" style="width: 50%; height: 50%;">
+                                            <option value="0">Не выбрано</option>
+                                            <option value="1">1</option>
+                                            <option value="2">0</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <button class="button" id="btnofSend" class="btn btn-primary">Найти</button>
+                                        <br><small>Поиск</small><br>
+                                        <button class="button" id="btnofSend" class="btn btn-primary" style="width: 50%; height: 50%;">Найти</button>
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +191,7 @@
                 </form>
             </div>
             <div class="row mx-1">
-                <div class="col-sm-12" style="border: 1px solid black;">
+                <div class="col-sm-12">
                     <div class="datas">
                         <table id="records" class="table">
                             <tr>
@@ -217,42 +219,56 @@
             </div>
         </section>
         <section class="menu">
-            <div class="container mx-1">
-                <div class="caption text-center mx-auto">
-                    <h2> Меню</h2>
-                    <div class="heading-line"></div>
+            <div class="container my-1">
+                <div class="caption text-center">
+                    <h2>Меню</h2>
+                    <div class="heading-line mx-auto d-flex justify-content-center"></div>
                 </div>
                 <div class="row" id="menu">
                     <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6"></div>
-                </div>   
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-6"></div>
+                </div>
             </div>
         </section>
-        <section class="options">
-            <div class="container">
+        <section class="options my-1">
+            <div class="container text-center">
                 <h5>Дополнительные опции</h5>
+                <div class="heading-line mx-auto d-flex justify-content-center"></div>
             </div>
-            <div class="container">
-                <label for="company">На компанию</label>
-                <input type="checkbox" name="company" id="company">
-                <label for="hot">Только горячим</label>
-                <input type="checkbox" name="hot" id="hot">
-                <button class="btn btn-warning my-2 my-sm-0 ml-auto" data-toggle="mymodal"
-                    data-target="#mymodal">Оформить заказ</button>
+            <div class="container my-3">
+                <div class="row">
+                    <div class="col-sm-6 cont">
+                        <div>
+                            <label for="company">На компанию</label>
+                            <input type="checkbox" name="company" id="company">
+                        </div>
+                        <div>
+                            <label for="hot">Только горячим</label>
+                            <input type="checkbox" name="hot" id="hot">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <button class="btn btn-warning my-2 my-sm-0 ml-auto d-flex justify-content-end"
+                            data-toggle="modal" data-target="#modal">Оформить заказ</button>
+                    </div>
+                </div>
             </div>
 
         </section>
 
     </main>
-    <div class="modal fade" id="mymodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <footer>
+
+    </footer>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
@@ -310,8 +326,6 @@
                         </div>
                 </div>
                 <div class="form-group row">
-                    <label for="column" class="col-md-3 col-form-label">Колонка</label>
-
                 </div>
                 <input type="hidden" name="action">
                 <input type="hidden" name="task-id">
@@ -323,7 +337,7 @@
             </div>
         </div>
     </div>
-    </div>
+
 
 
     <!-- Optional JavaScript -->
