--- a/project/indexadm.html
+++ b/project/indexadm.html
@@ -9,7 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Административная панель</title>
 </head>
 
@@ -23,7 +24,7 @@
                             <a class="nav-link" href="#">данные <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">справочники</a>
+                            <a class="nav-link" href="index.html">доставка</a>
                         </li>
                         <li class="nav-item">
                             <a href="" class="nav-link">приложения</a>
@@ -101,12 +102,95 @@
                     <button class="btn mx-1" data-page="3">3</button>
                 </div>
                 <button class="btn first-page-btn mx-1">Last</button>
+                <div class="formodal d-flex justify-content-end">
+                    <button class="btn btn-warning my-2 my-sm-0 ml-auto d-flex justify-content-end" data-toggle="modal"
+                        data-target="#modal">Добавить предприятие</button>
+                </div>
             </div>
         </section>
     </main>
     <footer>
 
     </footer>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Создание записи</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="name" class="col-md-3 col-form-label">Наименование</label>
+                            <div class="col-md-6">
+                                <input type="text" name="name" id="name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="radio" class="col-md-3 col-form-label">Является ли сетевым</label>
+                            <div class="col-md-6">
+                                Да<input type="radio" name="radio" id="radio" class="form-control">
+                                Нет<input type="radio" name="radio" id="radio" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="name" class="col-md-3 col-form-label">Название управляющей компании</label>
+                            <div class="col-md-6">
+                                <input type="text" name="name" id="name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="type" class="col-md-3 col-form-label">Вид объекта</label>
+                            <div class="col-md-6">
+                                <select name="type" id="type">
+                                    <option value="">Столовая</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="area" class="col-md-3 col-form-label">Административный округ</label>
+                            <div class="col-md-6">
+                                <select name="area" id="area">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="district" class="col-md-3 col-form-label">Район</label>
+                            <div class="col-md-6">
+                                <select name="district" id="district">
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="address" class="col-md-3 col-form-label">Адресс</label>
+                            <div class="col-md-6">
+                                <textarea name="address" id="address" cols="30" rows="10"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="sits" class="col-md-3 col-form-label">Число посадочных мест</label>
+                            <div class="col-md-6">
+                                <input type="text" id="sits" name="sits">
+                            </div>
+                        </div>
+                </div>
+                <input type="hidden" name="action">
+                <input type="hidden" name="task-id">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-dismiss="modal">Отменить</button>
+                <button type="button" class="btn btn-light">Сохранить</button>
+            </div>
+        </div>
+    </div>
+    </div>
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -121,7 +205,7 @@
                     <form>
                         <div class="form-group row">
                             <h6>Вы уверены, что хотите удалить данные предприятия </h6>
-                        </div> 
+                        </div>
                         <input type="hidden" name="action">
                         <input type="hidden" name="task-id">
                     </form>
