--- a/project/index.html
+++ b/project/index.html
@@ -181,7 +181,8 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <br><small>Поиск</small><br>
-                                        <button class="button" id="btnofSend" class="btn btn-primary" style="width: 50%; height: 50%;">Найти</button>
+                                        <button class="button" id="btnofSend" class="btn btn-primary"
+                                            style="width: 50%; height: 50%;">Найти</button>
                                     </div>
                                 </div>
                             </div>
@@ -202,6 +203,7 @@
                                 <th>Адрес</th>
                                 <th>Рейтинг</th>
                                 <th>Наличие соц.скидок</th>
+                                <th>Действие</th>
                             </tr>
                             <tbody></tbody>
                         </table>
@@ -255,9 +257,9 @@
                             <input type="checkbox" name="hot" id="hot">
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <button class="btn btn-warning my-2 my-sm-0 ml-auto d-flex justify-content-end"
-                            data-toggle="modal" data-target="#modal">Оформить заказ</button>
+                    <div class="col-sm-6 d-flex justify-content-end">
+                        <button class="btn btn-warning my-2 my-sm-0 ml-auto" data-toggle="modal"
+                            data-target="#modal">Оформить заказ</button>
                     </div>
                 </div>
             </div>
@@ -266,7 +268,9 @@
 
     </main>
     <footer>
-
+        <div class="container text-center">
+            <h4>Департамент торговли и услуг города Москвы</h4>
+        </div>
     </footer>
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -281,20 +285,22 @@
                 <div class="modal-body">
                     <form id="formation">
                         <div class="form-group row">
-                            <h6>Позиции заказа</h6>
+                            <h4>Позиции заказа</h4>
+                        </div>
+                        <div class="form-group row">
                             <div class="container">
-                                <h6>Дополнительные опции</h6>
+                                <h4>Дополнительные опции</h4>
                             </div>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <h7>Заказ на компанию</h7>
+                                        <h5>Заказ на компанию</h5>
                                     </div>
                                     <div class="col-sm-6">
                                         <p>цена увеличивается в 2.5 раз</p>
                                     </div>
                                     <div class="col-sm-6">
-                                        <h7>Только горячим</h7>
+                                        <h5>Только горячим</h5>
                                     </div>
                                     <div class="col-sm-6">
                                         <p>холодное блюдо стоит 500руб.</p>
@@ -303,37 +309,38 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <h6>Информация о предприятии</h6>
+                            <h4>Информация о предприятии</h4>
                         </div>
                         <div class="form-group row">
-                            <h6>Доставка</h6>
+                            <h4>Доставка</h4>
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-sm-12">
                                     <label for="zone">Зона доставки:</label>
                                     <input type="text" id="zone" name="zone">
                                 </div>
-                                <div class="col-sm-6">
+                                <div class="col-sm-12">
                                     <label for="address">Адрес доставки:</label>
                                     <textarea name="address" id="address" cols="30" rows="10">
 
                                     </textarea>
                                 </div>
-                                <div class="col-sm-6">
+                                <div class="col-sm-12">
                                     <label for="price">Стоимость доставки:</label>
+                                </div>
+                                <div class="col-sm-12">
+                                    <label for="name">ФИО получателя</label>
                                 </div>
 
                             </div>
                         </div>
+                    </form>
                 </div>
-                <div class="form-group row">
+               
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                    <button type="button" class="btn btn-primary">Создать</button>
                 </div>
-                <input type="hidden" name="action">
-                <input type="hidden" name="task-id">
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-                <button type="button" class="btn btn-primary">Создать</button>
             </div>
         </div>
     </div>
